--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -11,6 +11,14 @@
     border-radius: 5px;
     border:none;
 }
+.secondary-bg{
+    background-color:#FFF8F3;
+}
+.text-centre{
+    text-align: center;
+}
+
+
 .nav-title{
     font-weight:800;
     font-size: 45px;
@@ -84,4 +92,129 @@ nav{
    background-image: url('../images/developer.png'),url('../images/header_bg.png');
    background-repeat: no-repeat;
    background-position: bottom left, bottom right ;
+}
+/* main styles */
+main{
+    max-width: 1140px;
+    margin:0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+/* About Me */
+.about{
+    border-radius: 10px;
+    padding: 131px 157px;
+    margin:123px;
+    text-align: center;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: 700;
+    color:#181818;
+}
+.section-description{
+    font-size: 18px;
+    font-weight: normal;
+    color:#757575;
+    line-height: 30px;
+}
+.about-items{
+    display: flex;
+    justify-content:space-around;
+    gap:7px;
+    align-items: center;
+    
+}
+.about-title
+{
+    font-size: 20px;
+    font-weight: normal;
+    color:#757575;
+    line-height: 30px;
+}
+.about-description{
+    font-size: 20px;
+    font-weight: bold;
+    color:#474747;
+    line-height: 30px;
+}
+
+/* skills section */
+.skills-container{
+    display: flex;
+    gap:24px;
+
+}
+.skill{
+    width: 267px;
+    height: 377px;
+    background-color: white;
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0,0.06);
+}
+
+/* resume section styles */
+.resume-container{
+    display: flex;
+    gap:24px;
+}
+.resume-column-title{
+    font-size: 30px;
+    font-weight: bold;
+    color:#474747;
+    margin-bottom: 30px;
+}
+.experience-title{
+    font-size: 25px;
+    font-weight: bold;
+    color:#474747;
+    margin-bottom: 10px;
+}
+.experience-sub-title{
+    font-size: 20px;
+    font-weight:600;
+    color:#757575;
+    margin-bottom: 20px;
+}
+.experience-description{
+    width:511px;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 28px;
+    color:#757575;
+}
+hr{
+    margin: 30px 0px;
+}
+.resume-download-btn{
+    margin: 50px;
+}
+/* footer styles */
+footer{
+   padding: 130px 230px;
+   display: flex;
+   gap: 117px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input[type="email"],footer textarea {
+    height:25px;
+    border-radius: 5px;
+    display: block;
+    padding: 10px 20px;
+    width:50%;
+    margin-bottom: 24px;
+    line-height: 28px;
+    color: #757575;
+    border: none;
+}
+footer textarea {
+    resize: none; 
+    height: 150px; 
+    width: 50%;    
 }
